@@ -1,0 +1,11 @@
+.subckt foo<> !GND !Vdd en a b _o
+M_o:dn:0 !GND en #0 !GND nch W=5u L=2u
+M_o:dn:1:pchg !GND en #0 !Vdd pch W=5u L=2u
+M_o:dn:2 #0 a #1 !GND nch W=5u L=2u
+M_o:dn:3 #1 b _o !GND nch W=5u L=2u
+.ends
+
+xbar !GND !Vdd bar.en bar.a bar.b bar._o foo<>
+
+* --- WARNINGS ---
+* Warning : precharge is not fully-restoring.
