@@ -1,0 +1,12 @@
+// "non-CMOS-10.hac"
+// copy-modified from "non-CMOS-09.hac"
+// @hacknet-flags@ -f non_CMOS_precharge=warn
+
+defproc foo(bool en, a, b, _o) {
+prs {
+	en &{+en | a} a & b	-> _o-
+}
+}
+
+foo bar;
+
