@@ -1,0 +1,13 @@
+// "non-CMOS-11.hac"
+// copy-modified from "non-CMOS-10.hac"
+// @hacknet-flags@ -f non_CMOS_precharge=warn
+
+defproc foo(bool en, a, b, _o) {
+prs {
+	// really bizarre sh--...
+	en &{+en & ~a} a & b	-> _o-
+}
+}
+
+foo bar;
+
